Add missing cloudwatch logs permissions to lambda

--- a/cloudformation/lambda_policy.yaml
+++ b/cloudformation/lambda_policy.yaml
@@ -47,3 +47,19 @@ Resources:
             Resource: !ImportValue ExportedTopic
       Roles:
         - !Ref LambdaFunctionRole
+
+  LambdaFunctionCloudWatchPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: LambdaFunctionCloudWatchPolicy
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Action:
+              - logs:CreateLogGroup
+              - logs:CreateLogStream
+              - logs:PutLogEvents
+            Resource: "*"
+      Roles:
+        - !Ref LambdaFunctionRole
