--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ provider:
   stage: ${opt:stage, "live"}
   runtime: python3.12
   runtimeManagement: auto
+  versionFunctions: false
   architecture: x86_64
   region: ${opt:region, "eu-north-1"}
   memorySize: 256
@@ -22,7 +23,7 @@ functions:
     handler: handler.handler
     role: !Sub arn:aws:iam::${AWS::AccountId}:role/RSSFeedLambdaFunctionRole
     events:
-      - schedule: cron(0 7 * * ? *)
+      - schedule: cron(0 5 * * ? *)
 
 plugins:
   - serverless-python-requirements
