--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,16 +24,12 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: npm ci
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+        # Force due Serverless v4 clash with the plugins
+        run: npm ci -f
       - name: Deploy
         run: npm run-script deploy
         env:
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           RSS_FEED_URLS: ${{ secrets.RSS_FEED_URLS }}
           BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
           SNS_TOPIC_ARN: ${{ secrets.SNS_TOPIC_ARN }}
