--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         # Force due Serverless v4 clash with the plugins
         run: npm ci -f
       - name: Deploy
-        run: npm run-script deploy
+        run: npm run deploy
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           RSS_FEED_URLS: ${{ secrets.RSS_FEED_URLS }}
