--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -19,6 +19,9 @@ on:
       - "serverless.yml"
       - ".github/workflows/lambda.yml"
   workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   lambda:
     runs-on: ubuntu-latest
