--- a/.github/workflows/lambda.yml
+++ b/.github/workflows/lambda.yml
@@ -44,5 +44,5 @@ jobs:
       - name: Package
         run: npm run package
       - name: Deploy
-        if: github.event_name == 'push'
+        if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
         run: npm run deploy -- --package .serverless
