--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,9 +28,9 @@ jobs:
       id-token: write
       contents: read
     env:
-      TF_VAR_bucket_name: ${{ secrets.BUCKET_NAME }}
-      TF_VAR_topic_name: ${{ secrets.TOPIC_NAME }}
-      TF_VAR_rss_feeds_urls: ${{ secrets.RSS_FEED_URLS }}
+      TF_VAR_bucket_name: ${{ secrets.RSS_FEEDS_BUCKET }}
+      TF_VAR_topic_name: ${{ secrets.RSS_FEEDS_TOPIC }}
+      TF_VAR_rss_feeds_urls: ${{ secrets.RSS_FEEDS_URLS }}
       TF_VAR_lambda_package_path: "../rss-feeds.zip"
     steps:
       - name: Checkout repository
