--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -30,6 +30,7 @@ jobs:
     env:
       TF_VAR_bucket_name: ${{ secrets.RSS_FEEDS_BUCKET }}
       TF_VAR_topic_name: ${{ secrets.RSS_FEEDS_TOPIC }}
+      TF_VAR_alarm_topic_name: ${{ secrets.RSS_FEEDS_ALARM_TOPIC }}
       TF_VAR_rss_feeds_urls: ${{ secrets.RSS_FEEDS_URLS }}
       TF_VAR_lambda_package_path: "../rss-feeds.zip"
     steps:
