--- a/Pipfile
+++ b/Pipfile
@@ -16,4 +16,5 @@ feedparser = "==6.0.11"
 black = "==25.1.0"
 boto3 = ">=1.39.7"
 flake8 = "==7.3.0"
+pip-audit = "==2.9.0"
 python-dotenv = "==1.1.1"
