--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - "*.py"
       - "Pipfile*"
-      - ".github/workflows/codeql.yml"
+      - ".github/workflows/**/*.yml"
   schedule:
     - cron: "0 21 * * 0"
   workflow_dispatch:
