Add terraform linting to workflow

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -18,14 +18,38 @@ on:
       - "create_package.py"
       - "Pipfile*"
       - "terraform/**"
+      - ".github/workflows/terraform.yml"
+  schedule:
+    - cron: "0 21 1 * 0"
   workflow_dispatch:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  terraform:
-    name: Deploy Terraform
+  lint:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@v5
+      - name: Setup TFLint
+        uses: terraform-linters/setup-tflint@v4
+        with:
+          tflint_version: "latest"
+          tflint_wrapper: false
+      - name: Init TFLint
+        run: tflint --init
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        working-directory: ./terraform
+      - name: Terraform linting
+        id: tflint
+        run: tflint -f compact --minimum-failure-severity notice
+        working-directory: ./terraform
+  terraform:
+    if: ${{ github.event_name != 'schedule' }}
+    runs-on: ubuntu-latest
+    needs: lint
     permissions:
       id-token: write
       contents: read
