--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,6 @@ feedparser = "==6.0.12"
 
 [dev-packages]
 black = "==25.9.0"
-boto3 = ">=1.40.0"
+boto3 = "==1.40.47"
 flake8 = "==7.3.0"
 pip-audit = "==2.9.0"
