Exclude pipenv updates from cooldown

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,8 @@ updates:
       timezone: "Europe/Helsinki"
     cooldown:
       default-days: 1
+      exclude:
+        - "pipenv"
   - package-ecosystem: "terraform"
     directory: "/terraform"
     schedule:
