--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,7 +26,35 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  lint:
+  package:
+    if: ${{ github.event_name != 'schedule' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+      - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
+        with:
+          python-version: "3.14"
+          architecture: "x64"
+          cache: "pipenv"
+          cache-dependency-path: Pipfile.lock
+      - name: Install pipenv & create dependencies
+        run: |
+          pip install --prefer-binary -r requirements.txt
+          pipenv install
+          pipenv requirements > requirements.txt
+      - name: Create deployment package
+        run: python create_package.py --output ${{ github.workspace }}/${{ vars.LAMBDA_PACKAGE }}
+      - name: Upload package
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: lambda-package
+          path: ${{ github.workspace}}/${{ vars.LAMBDA_PACKAGE }}
+          overwrite: true
+          retention-days: 1
+          if-no-files-found: error
+  terraform-lint:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -49,38 +77,28 @@ jobs:
   terraform:
     if: ${{ github.event_name != 'schedule' }}
     runs-on: ubuntu-latest
-    needs: lint
+    needs: [terraform-lint, package]
     permissions:
       id-token: write
       contents: read
     env:
-      lambda_package: ${{ vars.LAMBDA_PACKAGE}}
+      lambda_package: ${{ vars.LAMBDA_PACKAGE }}
       TF_VAR_bucket_name: ${{ secrets.RSS_FEEDS_BUCKET }}
       TF_VAR_topic_name: ${{ secrets.RSS_FEEDS_TOPIC }}
       TF_VAR_alarm_topic_name: ${{ secrets.RSS_FEEDS_ALARM_TOPIC }}
       TF_VAR_rss_feeds_urls: ${{ vars.RSS_FEEDS_URLS }}
       TF_VAR_lambda_package_path: ${{ github.workspace}}/${{ vars.LAMBDA_PACKAGE }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-      - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
-        with:
-          python-version: "3.14"
-          architecture: "x64"
-          cache: "pipenv"
-          cache-dependency-path: Pipfile.lock
-      - name: Install pipenv & create dependencies
-        run: |
-          pip install --prefer-binary -r requirements.txt
-          pipenv install
-          pipenv requirements > requirements.txt
-      - name: Create deployment package
-        run: python create_package.py --output ${{ vars.LAMBDA_PACKAGE }}
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708 # v5.1.1
         with:
           aws-region: ${{ vars.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_ROLE }}
+      - name: Download package
+        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
+        with:
+          path: ${{ github.workspace }}
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
       - name: Terraform format
