--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -39,6 +39,19 @@ jobs:
         id: tflint
         run: tflint -f compact --minimum-failure-severity notice
         working-directory: ./terraform
+  analyze:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405 # v6.2.0
+        with:
+          python-version: "3.14"
+          architecture: "x64"
+      - name: Terraform analysis
+        run: checkov --quiet --compact
+        working-directory: ./terraform
   deploy:
     if: ${{ github.event_name != 'schedule' }}
     runs-on: ubuntu-latest
